[#688] Reverted snippets and added fix for arrow alignment.

--- a/packages/sdc/components/02-molecules/event-card/event-card.css
+++ b/packages/sdc/components/02-molecules/event-card/event-card.css
@@ -7,6 +7,8 @@
   border-radius: 0.25rem;
   width: 100%;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 .ct-event-card {
   box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.2);
@@ -63,12 +65,10 @@
 }
 .ct-event-card .ct-event-card__content {
   padding: 1.5rem;
-}
-.ct-event-card .ct-event-card__date {
-  margin-bottom: 1rem;
-}
-.ct-event-card .ct-event-card__title {
-  margin-bottom: 1rem;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 @media (min-width: 0) {
   .ct-event-card .ct-event-card__title {
@@ -124,12 +124,11 @@
     letter-spacing: -0.1px;
   }
 }
-.ct-event-card .ct-event-card__location {
-  margin-bottom: 1rem;
-}
 .ct-event-card .ct-event-card__tags {
   display: flex;
-  margin-top: 1rem;
+  margin-top: auto;
+  align-items: flex-end;
+  gap: 0.5rem;
 }
 .ct-event-card .ct-event-card__link-graphic {
   margin-left: auto;
