--- a/packages/sdc/components/02-molecules/snippet/snippet.css
+++ b/packages/sdc/components/02-molecules/snippet/snippet.css
@@ -5,43 +5,15 @@
 .ct-snippet {
   position: relative;
   width: 100%;
+  display: flex;
 }
-.ct-snippet--card {
-  border-radius: 0.25rem;
-  overflow: hidden;
-}
-.ct-snippet--card {
-  box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.2);
-}
-.ct-snippet--card:hover {
-  outline: 1px solid transparent;
-}
-.ct-snippet--card .ct-snippet__content {
-  padding: 1.5rem;
-}
-.ct-snippet:not(.ct-snippet--card) .ct-snippet__content {
+.ct-snippet .ct-snippet__content {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-.ct-snippet--card-clickable {
-  box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.2);
-}
-.ct-snippet--card-clickable:hover {
-  box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.2);
-}
-.ct-snippet--card-clickable:active {
-  box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.25);
-}
-.ct-snippet--card-clickable .ct-snippet__title-link::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-.ct-snippet .ct-snippet__title {
-  margin-bottom: 1rem;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 @media (min-width: 0) {
   .ct-snippet .ct-snippet__title {
@@ -64,7 +36,7 @@
 .ct-snippet .ct-snippet__title-link {
   font-size: inherit;
   line-height: inherit;
-  text-decoration: none;
+  text-decoration: underline;
 }
 .ct-snippet .ct-snippet__title-link:focus-visible {
   outline-offset: 0;
@@ -74,83 +46,28 @@
   border-radius: 0.25rem;
 }
 .ct-snippet .ct-snippet__title-link:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
 .ct-snippet .ct-snippet__title-link:visited {
   color: inherit;
 }
-.ct-snippet .ct-snippet__tags {
-  display: flex;
-  margin-top: 1rem;
-}
-.ct-snippet .ct-snippet__link-graphic {
-  margin-left: auto;
-  flex-shrink: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  width: 2rem;
-  height: 2rem;
-  pointer-events: none;
-}
-.ct-snippet .ct-snippet__link-graphic::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  opacity: 0.1;
-  border-radius: 100%;
-}
 .ct-snippet.ct-theme-light {
   background-color: var(--ct-snippet-light-background-color);
-}
-.ct-snippet.ct-theme-light.ct-snippet--card {
-  background-color: var(--ct-snippet-light-card-background-color);
-}
-.ct-snippet.ct-theme-light.ct-snippet--card-clickable:hover {
-  outline-color: var(--ct-snippet-light-hover-outline-color);
-}
-.ct-snippet.ct-theme-light.ct-snippet--card-clickable:hover .ct-snippet__title-link {
-  color: var(--ct-snippet-light-title-hover-color);
-}
-.ct-snippet.ct-theme-light.ct-snippet--card-clickable:hover .ct-snippet__link-graphic::before {
-  background-color: var(--ct-snippet-light-link-graphic-hover-background-color);
-}
-.ct-snippet.ct-theme-light:not(.ct-snippet--card-clickable) .ct-snippet__title-link:hover {
-  color: var(--ct-snippet-light-title-hover-color);
 }
 .ct-snippet.ct-theme-light .ct-snippet__title,
 .ct-snippet.ct-theme-light .ct-snippet__title-link {
   color: var(--ct-snippet-light-title-color);
 }
-.ct-snippet.ct-theme-light .ct-snippet__link-graphic {
-  color: var(--ct-snippet-light-link-graphic-color);
+.ct-snippet.ct-theme-light .ct-snippet__title-link:hover {
+  color: var(--ct-snippet-light-title-hover-color);
 }
 .ct-snippet.ct-theme-dark {
   background-color: var(--ct-snippet-dark-background-color);
-}
-.ct-snippet.ct-theme-dark.ct-snippet--card {
-  background-color: var(--ct-snippet-dark-card-background-color);
-}
-.ct-snippet.ct-theme-dark.ct-snippet--card-clickable:hover {
-  outline-color: var(--ct-snippet-dark-hover-outline-color);
-}
-.ct-snippet.ct-theme-dark.ct-snippet--card-clickable:hover .ct-snippet__title-link {
-  color: var(--ct-snippet-dark-title-hover-color);
-}
-.ct-snippet.ct-theme-dark.ct-snippet--card-clickable:hover .ct-snippet__link-graphic::before {
-  background-color: var(--ct-snippet-dark-link-graphic-hover-background-color);
-}
-.ct-snippet.ct-theme-dark:not(.ct-snippet--card-clickable) .ct-snippet__title-link:hover {
-  color: var(--ct-snippet-dark-title-hover-color);
 }
 .ct-snippet.ct-theme-dark .ct-snippet__title,
 .ct-snippet.ct-theme-dark .ct-snippet__title-link {
   color: var(--ct-snippet-dark-title-color);
 }
-.ct-snippet.ct-theme-dark .ct-snippet__link-graphic {
-  color: var(--ct-snippet-dark-link-graphic-color);
+.ct-snippet.ct-theme-dark .ct-snippet__title-link:hover {
+  color: var(--ct-snippet-dark-title-hover-color);
 }
